# kinetic-theory-of-gases

./: .clang-format  CMakeLists.txt  LICENSE  README.md
progress/week_1/: main.tex
progress/week_2/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.tex  main.toc  main.vrb
progress/week_3/: main.tex
scripts/: cmake.sh  run.sh
src/engine/: CMakeLists.txt  ballsCollection.cpp  ballsCollection.hpp  chamber.cpp  chamber.hpp  gasAtom.cpp  gasAtom.hpp  geometry.hpp  materialpoint.cpp  materialpoint.hpp  physconstants.hpp  real.hpp  sync.cpp  sync.hpp  units.hpp  universe.cpp  universe.hpp
src/visuals/: CMakeLists.txt  chamberdisplayer.cpp  chamberdisplayer.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  physicsthread.cpp  physicsthread.hpp
